Added convenience functions for cleaner end-dev coding of SVG attributes & styles.

--- a/WebContent/d3-line/index.html
+++ b/WebContent/d3-line/index.html
@@ -28,6 +28,7 @@
 	<svg id="svg2"></svg>
 <br/>
 <div>
+	<button type="button" onclick="D3Script.drawLineWf();">Draw D3 Line WF</button>
 	<button type="button" onclick="D3Script.drawLine();">Draw D3 Line</button>
 	<button type="button" onclick="D3Script.drawLineMulti();">Draw jQuery Line Multi</button>
 </div>
