Cleaned up code

--- a/WebContent/little-andy/peter-bunny/inline-from-codepen-iframe.html
+++ b/WebContent/little-andy/peter-bunny/inline-from-codepen-iframe.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <!-- TODO: DEBUG RLN - This is NOT where CodePen.io put jquery  -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <!-- script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script -->
       <link rel="apple-touch-icon" type="image/png" href="https://static.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
       <meta name="apple-mobile-web-app-title" content="CodePen">
       <link rel="shortcut icon" type="image/x-icon" href="https://static.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
@@ -237,7 +237,7 @@
       <div class="target"></div>
       <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
       <!-- TODO: DEBUG RLN - This is where CodePen.io put jquery  -->
-      <!--  script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script id="rendered-js">
          var $screen = $(document);
          var $scene = 0;
