--- a/WebContent/d3-line/index.html
+++ b/WebContent/d3-line/index.html
@@ -7,6 +7,9 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
+	<title>D3 SVG</title>
+	<!-- link rel="icon" href="images/wf-business-icon-trans-300x300.png" type="img/png" -->
+	<link rel="icon" href="images/wf-icon-mix.png" type="img/png">
 	<style type="text/css">
 		@import url(style.css);
 	</style>
@@ -19,21 +22,24 @@
 	<script src="script.js"></script>
 </head>
 
-<div>
-  <img src="https://playcode.io/static/img/logo.png" 
-       alt="PlayCode logo">
-  <h1 id="msg"></h1>
-</div>
-	<svg id="svg1"></svg>
-	<svg id="svg2"></svg>
-<br/>
-<div>
-	<button type="button" onclick="D3Script.drawLineWf();">Draw D3 Line WF</button>
-	<button type="button" onclick="D3Script.drawLine();">Draw D3 Line</button>
-	<button type="button" onclick="D3Script.drawLineMulti();">Draw jQuery Line Multi</button>
-</div>
-<script>
-	$(function() {
-//		D3Script.drawLine();
-	});
-</script>
+<body>
+	<div>
+	  <img src="https://playcode.io/static/img/logo.png" 
+	       alt="PlayCode logo">
+	  <h1 id="msg"></h1>
+	</div>
+		<svg id="svg1"></svg>
+		<svg id="svg2"></svg>
+	<br/>
+	<div>
+		<button type="button" onclick="D3Script.drawLineWf();">Draw D3 Line WF</button>
+		<button type="button" onclick="D3Script.drawLine();">Draw D3 Line</button>
+		<button type="button" onclick="D3Script.drawLineMulti();">Draw jQuery Line Multi</button>
+	</div>
+	<script>
+		$(function() {
+	//		D3Script.drawLine();
+		});
+	</script>
+</body>
+
