--- a/WebContent/audio/index.html
+++ b/WebContent/audio/index.html
@@ -19,6 +19,7 @@
 
 <body>
 	<h1>WF Audio v6</h1>
+	<h2><input id="AutoPlay" type="checkbox"><label for="AutoPlay">Auto Play</label></h2>
 	<div>
 		<div id="Config1" class="configDiv">
 			<h2>Audio #1 - relative path</h2>
@@ -27,7 +28,7 @@
 			</audio>
 			<h2>Audio #2 - file:</h2>
 			<audio controls>
-				<source src="file:///Users/raymondnaseef/Downloads/Susan-Boyle-I-dreamed-a-dream.mp3" type="audio/mpeg">
+				<source src="file:///develop/eclipse-workspace/wf-sandbox-web-static/WebContent/audio/sources/Susan-Boyle-I-dreamed-a-dream.mp3" type="audio/mpeg">
 			</audio>
 			<h2>Audio #3 - base64 inline</h2>
 			<audio controls>
