--- a/WebContent/editor-ace/index.html
+++ b/WebContent/editor-ace/index.html
@@ -11,7 +11,12 @@
 	<h1>Ace Editor</h1>
 	<div>
 		<ul>
+			<li><a href="https://ace.c9.io/">Ace Editor Homepage</a></li>
+			<li><a href="https://ace.c9.io/#nav=api&api=editor">Ace Editor API</a></li>
+			<li><a href="https://github.com/ajaxorg/ace-builds/">Ace Editor Github</a></li>
 			<li><a href="aceDemo.html">Embedded example</a></li>
+			<li><a href="ace-builds/demo/">ACE Demos</a></li>
+			<li><a href="ace-builds/demo/shadow-dom.html">Shadow DOM (HTML editor, CSS editor, Canvas)</a></li>
 		</ul>
 	</div>
 </body>
