Processing.js: improved pause/continue & cleaned up

--- a/WebContent/processing-js/index.html
+++ b/WebContent/processing-js/index.html
@@ -58,7 +58,7 @@ var draw = function() {
 
     <div style="float: right; width: 45%;">
 		<!--This draws the Canvas on the webpage -->
-	      <canvas id="mycanvas"></canvas> 
+	      <canvas id="MyCanvas"></canvas> 
     </div>
 
 	<br clear="both"/>
