--- a/WebContent/processing-js/processWithAce.html
+++ b/WebContent/processing-js/processWithAce.html
@@ -8,7 +8,7 @@ https://github.com/Team-Code/KA_Offline -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<style>
 body {
-/* 	background-color: beige; */
+	background-color: gray;
 }
 
 #WorkArea {
@@ -28,7 +28,7 @@ body {
 
 #Menu > * {
 	display: relative;
-	margin: 10px auto 0 auto;
+	margin: 10px auto 0 20px;
 }
 
 
@@ -51,6 +51,7 @@ body {
 	position: relative;
 	margin-left: 30px;
 	height: 100%;
+	border: solid 2px black;
  }
 
 	</style>
@@ -98,19 +99,21 @@ var draw = function() {
 <div id="Menu">
 	<button type="button" onclick="runEditor();">RESTART</button>
 	<button id="PauseButton" type="button" onclick="togglePause();">PAUSE</button>
-	<label for="FrameRate" style="display: none;">Frame Rate:</label>
-	<select id="FrameRate" onchange="changeFrameRate();" style="display: none;">
-		<option val="0">0</option>
-		<option val="10">10</option>
-		<option val="20">20</option>
-		<option val="30" selected>30</option>
-		<option val="40">40</option>
-		<option val="50">50</option>
-		<option val="60">60</option>
-		<option val="70">70</option>
-		<option val="80">80</option>
-		<option val="90">90</option>
-	</select>
+	<span style="display: none;">
+		<label for="FrameRate">Frame Rate:</label>
+		<select id="FrameRate" onchange="changeFrameRate();">
+			<option val="0">0</option>
+			<option val="10">10</option>
+			<option val="20">20</option>
+			<option val="30" selected>30</option>
+			<option val="40">40</option>
+			<option val="50">50</option>
+			<option val="60">60</option>
+			<option val="70">70</option>
+			<option val="80">80</option>
+			<option val="90">90</option>
+		</select>
+	</span>
 </div>
 
 <script src="../editor-ace/ace-builds/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
