Processing.js: cleaned up code

--- a/WebContent/processing-js/processWithAce.html
+++ b/WebContent/processing-js/processWithAce.html
@@ -102,16 +102,16 @@ var draw = function() {
 	<span style="display: none;">
 		<label for="FrameRate">Frame Rate:</label>
 		<select id="FrameRate" onchange="changeFrameRate();">
-			<option val="0">0</option>
-			<option val="10">10</option>
-			<option val="20">20</option>
-			<option val="30" selected>30</option>
-			<option val="40">40</option>
-			<option val="50">50</option>
-			<option val="60">60</option>
-			<option val="70">70</option>
-			<option val="80">80</option>
-			<option val="90">90</option>
+			<option value="0">0</option>
+			<option value="10">10</option>
+			<option value="20">20</option>
+			<option value="30" selected>30</option>
+			<option value="40">40</option>
+			<option value="50">50</option>
+			<option value="60">60</option>
+			<option value="70">70</option>
+			<option value="80">80</option>
+			<option value="90">90</option>
 		</select>
 	</span>
 </div>
@@ -131,7 +131,7 @@ var draw = function() {
 </script>
 
 
-	<br clear="both"/>
+	<br clear="all"/>
 
 	<div>
 		<button type="button" onclick="showSecondCanvas();">Show Second Canvas</button>
