Added many items: latest addition is timezone-utils-js

--- a/WebContent/editor-ace/index.html
+++ b/WebContent/editor-ace/index.html
@@ -17,6 +17,8 @@
 			<li><a href="aceDemo.html">Embedded example</a></li>
 			<li><a href="ace-builds/demo/">ACE Demos</a></li>
 			<li><a href="ace-builds/demo/shadow-dom.html">Shadow DOM (HTML editor, CSS editor, Canvas)</a></li>
+			<li><a href="ace-builds/demo/keyboard_shortcuts.html">Keyboard Shortcuts</a></li>
+			<li><a href="ace-builds/demo/bookmarklet/index.html">Demo With Settings Menu</a></li>
 		</ul>
 	</div>
 </body>
