--- a/WebContent/img-config/index.html
+++ b/WebContent/img-config/index.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8">
 	<title>WF Image Configurations</title>
 	<!-- link rel="icon" href="images/wf-business-icon-trans-300x300.png" type="img/png" -->
-	<link rel="icon" href="images/wf-icon-mix.png" type="img/png">
+	<link rel="icon" href="../images/wf-icon-mix.png" type="img/png">
 	<style type="text/css">
 		@import url(style.css);
 	</style>
